--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="../resources/reset.css" rel="stylesheet">
+    <link href="../resources/style.css" rel="stylesheet">
+    <title>First Portfolio</title>
 </head>
 <body>
-    
+    <h1>NI</h1>
+
 </body>
 </html>
