rough home page design

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     <link href="../resources/reset.css" rel="stylesheet">
     <link href="../resources/style.css" rel="stylesheet">
     <title>First Portfolio</title>
 </head>
 <body>
-    <h1>NI</h1>
-
+    <nav>
+        <ul class="navigation">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#about">About Me</a></li>
+        </ul>
+    </nav>
+    <!--Home Page-->
+    <section id="home">
+        <div class="home-info">
+            <h3>Hello,</h3>
+            <h2>I'm Jonathan Santos</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, neque nostrum esse accusamus.</p>
+        </div>
+        <img src="../resources/images/minatoRef.jpg">
+    </section>
 </body>
 </html>
