Start the project section

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,25 @@
         <div class="home-info">
             <h3>Hello,</h3>
             <h2>I'm Jonathan Santos</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, neque nostrum esse accusamus.</p>
+            <p>Aspiring Software Engineer</p>
+            <p>Based in Texas</p>
         </div>
-        <img src="../resources/images/minatoRef.jpg">
+        <img src="../resources/images/portme.png">
     </section>
+    <!--Projects Section-->
+    <div id="projects" class="project-container">
+        <h2>Projects</h2>
+        <div class="project-showcase">
+            <div class="project-template">
+
+            </div>
+            <div class="project-template">
+
+            </div>
+            <div class="project-template">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
