finish project section

--- a/public/index.html
+++ b/public/index.html
@@ -35,13 +35,13 @@
         <h2>Projects</h2>
         <div class="project-showcase">
             <div class="project-template">
-
+                <img src="../resources/images/clubDemo.PNG" id="image">
             </div>
             <div class="project-template">
-
+                <img src="../resources/images/animeDemo.PNG" id="image">
             </div>
-            <div class="project-template">
-
+            <div class="project-template" id="short-image">
+                <img src="../resources/images/toDemo.PNG" id="image">
             </div>
         </div>
     </div>
