start skills section

--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,14 @@
             </div>
         </div>
     </div>
+    <!--Technical Skills-->
+    <div class="skills" id="skills">
+        <h2>Skills</h2>
+        <img src="../resources/images/pngwing.com (2).png" class="skill-html">
+        <img src="../resources/images/pngwing.com (1).png" class="skill-css">
+        <img src="../resources/images/pngwing.com (3).png" class="skill-javascript">
+        <img src="../resources/images/pngwing.com (4).png" class="skill-java">
+        <img src="../resources/images/pngwing.com (5).png" class="skill-python">
+    </div>
 </body>
 </html>
